logs/dag_id=dag_with_postgres_operator_v02/run_id=scheduled__2024-03-26T00:00:00+00:00/task_id=insert_postgres_table/attempt=5.log
[2024-03-28T02:29:05.814+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.insert_postgres_table scheduled__2024-03-26T00:00:00+00:00 [queued]>
[2024-03-28T02:29:05.819+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.insert_postgres_table scheduled__2024-03-26T00:00:00+00:00 [queued]>
[2024-03-28T02:29:05.819+0000] {taskinstance.py:2193} INFO - Starting attempt 5 of 10
[2024-03-28T02:29:05.827+0000] {taskinstance.py:2217} INFO - Executing <Task(PostgresOperator): insert_postgres_table> on 2024-03-26 00:00:00+00:00
[2024-03-28T02:29:05.830+0000] {standard_task_runner.py:60} INFO - Started process 1994 to run task
[2024-03-28T02:29:05.833+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v02', 'insert_postgres_table', 'scheduled__2024-03-26T00:00:00+00:00', '--job-id', '209', '--raw', '--subdir', 'DAGS_FOLDER/docker_with_postgres.py', '--cfg-path', '/tmp/tmpzhy3ac3f']
[2024-03-28T02:29:05.835+0000] {standard_task_runner.py:88} INFO - Job 209: Subtask insert_postgres_table
[2024-03-28T02:29:05.863+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_with_postgres_operator_v02.insert_postgres_table scheduled__2024-03-26T00:00:00+00:00 [running]> on host 6ba63bfba168
[2024-03-28T02:29:05.904+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='ethan_wu' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v02' AIRFLOW_CTX_TASK_ID='insert_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2024-03-26T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-03-26T00:00:00+00:00'
[2024-03-28T02:29:05.905+0000] {sql.py:276} INFO - Executing: 
            insert into dag_runs
             (dt, dag_id)
               with values (
            '2024-03-26', 'dag_with_postgres_operator_v02'
            )
            
[2024-03-28T02:29:05.910+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-28T02:29:05.915+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-28T02:29:05.921+0000] {sql.py:457} INFO - Running statement: 
            insert into dag_runs
             (dt, dag_id)
               with values (
            '2024-03-26', 'dag_with_postgres_operator_v02'
            )
            , parameters: None
[2024-03-28T02:29:05.923+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "'2024-03-26'"
LINE 5:             '2024-03-26', 'dag_with_postgres_operator_v02'
                    ^

[2024-03-28T02:29:05.928+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v02, task_id=insert_postgres_table, execution_date=20240326T000000, start_date=20240328T022905, end_date=20240328T022905
[2024-03-28T02:29:05.935+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 209 for task insert_postgres_table (syntax error at or near "'2024-03-26'"
LINE 5:             '2024-03-26', 'dag_with_postgres_operator_v02'
                    ^
; 1994)
[2024-03-28T02:29:05.967+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-28T02:29:05.977+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
